--- a/cpp06/ex01/Makefile
+++ b/cpp06/ex01/Makefile
@@ -1,8 +1,9 @@
-NAME = ex01
-SRCS := Bureaucrat.cpp main.cpp Form.cpp
-OBJS := $(SRCS:.cpp=.o)
+NAME = serializer
 CXX := c++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98
+SRCS := main.cpp Serializer.cpp
+
+OBJS := $(SRCS:.cpp=.o)
 
 
 all: $(NAME)
@@ -17,6 +18,6 @@ clean:
 fclean: clean
 	@rm -f $(NAME)
 
-re: fclean $(NAME)
+re: fclean all
 
 .PHONY: all clean fclean re
