--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -1,10 +1,9 @@
-
-
 NAME = ex02
-SRCS := Bureaucrat.cpp  AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp main.cpp
-OBJS := $(SRCS:.cpp=.o)
 CXX := c++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98
+SRCS := main.cpp Base.cpp
+
+OBJS := $(SRCS:.cpp=.o)
 
 
 all: $(NAME)
@@ -19,6 +18,6 @@ clean:
 fclean: clean
 	@rm -f $(NAME)
 
-re: fclean $(NAME)
+re: fclean all
 
 .PHONY: all clean fclean re
